unpackaged/main/default/objects/CMPL123CME__Questions_Template__c/CMPL123CME__Questions_Template__c.object-meta.xml
<CustomObject>
    <label>Assessment Admin</label>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>