unpackaged/main/default/objects/CMPL123CME__Questions_Template__c/fields/CMPL123CME__Assessment_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assessment_Status__c</fullName>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>