unpackaged/main/default/objects/CMPL123CME__Questions_Template__c/fields/CMPL123CME__Product_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Product_Name__c</fullName>
        <formula>CMPL123CME__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </CustomField>