unpackaged/main/default/objects/CMPL123CME__Questions_Template__c/fields/CMPL123CME__QT_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__QT_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>QT External Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>