unpackaged/main/default/objects/CMPL123CME__Questions_Template__c/fields/CMPL123CME__Stage__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>