unpackaged/main/default/objects/CMPL123CME__Questions_Template__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Product_Name__c</columns>
        <columns>CMPL123CME__Stage__c</columns>
        <columns>CMPL123CME__Key_Value__c</columns>
        <columns>CMPL123CME__Assessment_Version__c</columns>
        <columns>CMPL123CME__Assessment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>